# getSentiment

./: __init__.py  pyproject.toml  requirements.txt
extension/: manifest.json  popup.html  popup.js
extension/images/: get_started48.png:Zone.Identifier  get_started48.pngZone.Identifier
getSentiment/: __init__.py  index.html  sample.txt
