[tool.poetry]
name = "getSentiment"
version = "1.0.0"
description = ""
authors = ["sp9 <sethu.pastula@metaswitch.com>"]

[tool.poetry.dependencies]
python = "3.9"
torch = "^1.12.1"
azure-cli = "^2.40.0"
azure-functions = "^1.11.3"
transformers = "^4.22.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
